terraform/vmNfs.tf
# Creamos laa máquina virtual NFS
# https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/linux_virtual_machine

resource "azurerm_linux_virtual_machine" "VMNfs" {
  name                            = "fjarrin-vm-nfs"
  resource_group_name             = azurerm_resource_group.rg.name
  location                        = azurerm_resource_group.rg.location
  size                            = var.sizecpu2
  admin_username                  = var.ssh_user
  network_interface_ids           = [azurerm_network_interface.nicNfs.id]
  disable_password_authentication = true

  admin_ssh_key {
    username   = var.ssh_user
    public_key = file(var.public_key_path)
  }

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  plan {
    name      = "centos-8-stream-free"
    product   = "centos-8-stream-free"
    publisher = "cognosys"
  }

  source_image_reference {
    publisher = "cognosys"
    offer     = "centos-8-stream-free"
    sku       = "centos-8-stream-free"
    version   = "1.2019.0810"
  }

  boot_diagnostics {
    storage_account_uri = azurerm_storage_account.stAccount.primary_blob_endpoint
  }

  tags = {
    environment = "CP2"
  }

}

resource "azurerm_managed_disk" "DiskNfs" {
  name                 = "nfs-disk1"
  resource_group_name  = azurerm_resource_group.rg.name
  location             = azurerm_resource_group.rg.location
  storage_account_type = "Standard_LRS"
  create_option        = "Empty"
  disk_size_gb         = 10
}

resource "azurerm_virtual_machine_data_disk_attachment" "AttDiskNfs" {
  managed_disk_id    = azurerm_managed_disk.DiskNfs.id
  virtual_machine_id = azurerm_linux_virtual_machine.VMNfs.id
  lun                = "10"
  caching            = "ReadWrite"
}
